doc almost finished

--- a/elteikthesis-master/samples_hu/intro.tex
+++ b/elteikthesis-master/samples_hu/intro.tex
@@ -2,7 +2,7 @@
 \label{ch:intro}
 
 \section{A számításelmélet rövid története}
-A számításelmélet az 1930-as évek középén Alan Turing és Alonzo Church munkássága révén vált külön tudományággá, amelynek központjában a számítások és a számítógépek formális modellezése és elemzése áll \cite{savage2008modelsofcomp}. A terület azóta is kulcsfontosságú szerepet kap az informatikában. Az előbb említett matematikai logikával foglalkozó tudósok és társaik arra a kérdésre szerettek volna választ adni, hogy mit jelent maga a számítás? Ezzel az algoritmus matematikai modelljének megalkotását tűzték ki célul. Természetesen a számításelmélet létrejötte előtt is születtek algoritmusok, de azok nem törekedtek formalitásra, hanem egyszerűen csak rögzítették a végrehajtandó utasítások sorrendjét. A kérdés megválaszolása érdekében Turing bevezette a Turing gépet, Church pedig a lambda kalkulust. Ezen eszközök segítségével elkezdték vizsgálni a kiszámíthatóságot. Azt fedezték fel, hogy vannak olyan számítási feladatok, amelyekre nem adható algoritmikusan válasz, illetve, hogy vannak olyan univerzális számítógépek, amelyek minden másik számításra alkalmas gépet szimulálni tudnak.
+A számításelmélet az 1930-as évek középén Alan Turing és Alonzo Church munkássága révén vált külön tudományággá, amelynek központjában a számítások és a számítógépek formális modellezése, illetve elemzése áll \cite{savage2008modelsofcomp}. A terület azóta is kulcsfontosságú szerepet kap az informatikában. Az előbb említett matematikai logikával foglalkozó tudósok és társaik arra a kérdésre szerettek volna választ adni, hogy mit jelent maga a számítás. Ezzel az algoritmus matematikai modelljének megalkotását tűzték ki célul. Természetesen a számításelmélet létrejötte előtt is születtek algoritmusok, de azok nem törekedtek formalitásra, hanem egyszerűen csak rögzítették a végrehajtandó utasítások sorrendjét. A kérdés megválaszolása érdekében Turing bevezette a Turing gépet, Church pedig a lambda kalkulust. Ezen eszközök segítségével elkezdték vizsgálni a kiszámíthatóságot. Azt fedezték fel, hogy vannak olyan számítási feladatok, amelyekre nem adható algoritmikusan válasz, illetve, hogy vannak olyan univerzális számítógépek, amelyek minden másik számításra alkalmas gépet szimulálni tudnak.
 Ez vezetett a Church-Turing tézis megfogalmazásához, amely szerint minden olyan matematikailag formalizálható probléma, ami megoldható valamilyen algoritmussal, az Turing géppel is megoldható. Később kiderült, hogy léteznek a Turing géppel azonos számítási erejű modellek, viszont azóta sem találtak ennél nagyobb számítási erővel rendelkező absztrakt modellt. Ezek szerint ha elfogadjuk a tézist, akkor a Turing gép tekinthető az algoritmus formális modelljének.
 
 A tudományág fejlődését ösztönözte és elősegítette a digitális számítógépek megjelenése. A tézis után pár évvel Konrad Zuse elkészítette az első általános célú programozható elektromechanikus számítógépet, amelyet elektromágneses relékkel működtetett. 1945-ben készült el az első teljesen elektromos számítógép, az ENIAC, majd Neumann János 1947-ben megfogalmazta a mai számítógép működésének alapjául szolgáló Neumann-elveket. Azóta a számítógépek számítási kapacitása rohamos ütemben növekedik, ám az akkor fontosnak vélt számítási elemzések és korlátok a mai napig fontos szempontot adnak algoritmusok megalkotásánál.
@@ -12,7 +12,7 @@ A tudományág fejlődését ösztönözte és elősegítette a digitális szám
 
 %Az 1950-es években jelentek meg a véges automaták, illetve ekkor hódított teret  a Chomsky által bevezettt nyelvhierarchia, ami a formális nyelvek megfogalmazásában bontakozott ki.
 
-A mai számításelmélet nagyon változazos témák tárházával rendelkezik, 
+A mai számításelmélet nagyon változatos témák tárházával rendelkezik; 
 magába foglalja az algoritmusok, adatszerkezetek, elosztott és párhuzamosított számítások, kvantumszámítások, biológiai számítások vizsgálatát, illetve nem utolsó sorban a bonyolultságelméletet és az információelméletet.
 Mindezekből látszik, hogy milyen szerteágazó tematikája és problémaköre van a számításelméletnek és hogy ezek az irányvonalak folyamatosan képesek fejlődni és gazdagodni.
 
@@ -20,10 +20,10 @@ Mindezekből látszik, hogy milyen szerteágazó tematikája és problémaköre 
 
 A 20. század második felében egyre nagyobb figyelmet kaptak az olyan számítások, amely a természetben vagy valamilyen természeti jelenséghez kapcsolódóan mennek végbe \cite{paun2002membrane}. Ezen megfigyelések eredményeképpen megszületett a biológiai számítások területe, amelynek számos új módszert és algoritmust köszönhetünk. Ide tartoznak például a genetikus algoritmusok (általánosabban véve az evolúciós algoritmusok), illetve a neurális hálók. Ezen irányvonal kiterjesztésének tekinthetőek az 21.század legelejére kibontakozó területek mint a membránszámítások és a DNS számítások, amelyek közül az utóbbit a molekuláris biológia alapjaira modelleztek.
 
-A membránszámítások legnagyobb inspirációját a biológiai sejtek jelentik, amelyek az élet legelemibb építőelemei. A sejtek működésében és struktúrájában pedig elengedhetetlenek a membránok, amelyek a sejten belüli rétegződést határozzák meg. Egy sejtet a környezetétől a legkülső membránja (úgynevezett skin) határol el, a rétegződésért pedig a belső membránok felelősek.  Egy-egy ilyen membrán pedig egy saját belső teret, \textit{régiót} határol el.
-Ezen régiókban pedig kémiai reakciók mehetnek végbe, amely hatására különböző molekulák átvándorolhatnak a membránokon keresztül új régiókba. Ezzel a térbeli struktúráltsággal egészítik ki a membránszámítások a DNS számításokat.A  membránszámítás motivációja, hogy egy olyan modellt tudjuk konstruálni, amely képes a sejtek közötti és sejten belüli molekulák által közvetített információáramlás mechanizmusának leírására, szemléltetésére.
+A membránszámítások legnagyobb inspirációját a biológiai sejtek jelentik, amelyek az élet legelemibb építőelemei. A sejtek működésében és struktúrájában pedig elengedhetetlenek a membránok, amelyek a sejten belüli rétegződést határozzák meg. Egy sejtet a környezetétől a legkülső membránja (ún. \textit{skin}) határol el, a rétegződésért pedig a belső membránok felelősek.  Egy-egy ilyen membrán pedig egy saját belső teret, \textit{régiót} határol el.
+Ezen régiókban pedig kémiai reakciók mehetnek végbe, amely hatására különböző molekulák átvándorolhatnak a membránokon keresztül más régiókba. Ezzel a térbeli strukturáltsággal egészítik ki a membránszámítások a DNS számításokat.A  membránszámítás motivációja, hogy egy olyan modellt tudjuk konstruálni, amely képes a sejtek közötti és sejten belüli molekulák által közvetített információáramlás mechanizmusának leírására, szemléltetésére.
 
-Ezen célkitűzéssel vezette be Gheorge Paun a membránrendszereket 2000-ben. Később az ilyen modelleket P-rendszereknek is elnevezték az ő tiszteletére. Ahhoz, hogy a biokémiai folyamatokat modellezni tudja, figyelembe vette ezen folyamatok törvényszerűségeit. Nevezetesen, hogy az ilyen reakciók végbemeneteléhez kellő számban szükség van a reakcióhoz szükséges kezdeti molekulákra és ha ezek rendelkezésre állnak, akkor a reakció biztosan meg is fog történni. Emellett egyszerre több reakció (vagy akár egy reakció többször) is végbemehet, ha van hozzá(juk) elegendő nyersanyag. Speciális esetekben egy reakció hatására membránok feloldódhatnak, ilyenkor a benne rejlő molekulák és belső régiók az őt körülvevő régióba kerülnek, illetve az is előfordulhat, hogy a reakciók között valamilyen prioritási sorrend is fennállhat; azaz az egyik reakció nem hajtódhat végre, amíg egy a másik reakciónak lehetősége van rá. Ezen reakciók úgynevezett \textit{evolúciós lépésekbe} szerveződnek, amelyek során a régiók molekulái és a membránrendszer struktúrája is átalakulhat.
+Ezen célkitűzéssel vezette be Gheorge Paun a membránrendszereket 2000-ben. Később az ilyen modelleket P-rendszereknek is elnevezték az ő tiszteletére. Ahhoz, hogy a biokémiai folyamatokat modellezni tudja, figyelembe vette ezen folyamatok törvényszerűségeit. Nevezetesen, hogy az ilyen reakciók végbemeneteléhez kellő számban szükség van a reakcióhoz kezdeti molekulákra és ha ezek rendelkezésre állnak, akkor a reakció biztosan meg is fog történni. Emellett egyszerre több reakció (vagy akár egy reakció többször) is végbemehet, ha van hozzá(juk) elegendő nyersanyag. Speciális esetekben egy reakció hatására membránok feloldódhatnak, ilyenkor a bennük rejlő molekulák és belső régiók az őt körülvevő régióba kerülnek, illetve az is előfordulhat, hogy a reakciók között valamilyen prioritási sorrend is fennáll; azaz az egyik reakció nem hajtódhat végre, amíg egy a másik reakciónak lehetősége van rá. Ezen reakciók úgynevezett \textit{evolúciós lépésekbe} szerveződnek, amelyek során a régiók molekulái és a membránrendszer struktúrája is átalakulhat.
 
 A számítás központi szereplői az előbbi tulajdonságokkal rendelkező reakciók, amelyek a membránrendszerekben szabályoknak nevezünk, a résztvevő molekulákat pedig objektumoknak. Ezek a szabályok régiókhoz vannak rendelve. A szabályok alkalmazására a maximális párhuzamosság elve érvényes, azaz ha a jelenleg alkalmazott szabályok után még alkalmazható lenne egy újabb vagy egy eddig már alkalmazott szabály, akkor az a szabály végre is lesz hajtva az adott evolúciós lépésben. Ennek megfelelően a membránrendszer evolúciós lépések sorozatán megy keresztül, egészen addig, amíg már nincsen egyetlen alkalmazható szabály sem. Ilyenkor a számítás eredményét alapértelmezetten a környezetbe kijutó objektumok számának tekinjük, de ez egyes rendszerekben másképpen is megadható (például egy kijelölt kimeneti régió objektumainak számával).
 
@@ -32,11 +32,11 @@ A számítás központi szereplői az előbbi tulajdonságokkal rendelkező reak
 \section{Megvalósítandó feladat}
 
 A dolgozatom célja egy olyan szoftver elkészítése, amely lehetővé teszi a felhasználó számára különböző felépítésű membránrendszerek megkonstruálását, grafikus módon való megjelenítését, illetve számításainak végrehajtását. A támogatott számítási modellek magukba foglalják a membránrendszerek alapmodelljét (amelyben egyes régiók feloldódhatnak, illetve a szabályok között lehet prioritási sorrend) és a szimport-antiport rendszereket.
-A membránrendszer létrehozását a felhasználó egy (megfelelő formátumú) karakterlánc megadásával kezdeményezheti, ami egyszerűen és szemléletesen írja le a membránrendszer struktúráját és opcionálisan tartalmazhatja régiokra bontva a benne található objektumokat. A megalkotott membránrendszer ilyenkor még nem rendelkezik evolúciós szabályokkal, azokat egy külön menü segítségével tudja beállítani. Ilyenkor a kiválasztott régió objektumai is szerkeszthetőek.
+A membránrendszer létrehozását a felhasználó egy (megfelelő formátumú) karakterlánc megadásával kezdeményezheti, ami egyszerűen és szemléletesen írja le a membránrendszer struktúráját és opcionálisan tartalmazhatja régiokra bontva a benne található objektumokat. A megalkotott membránrendszer ilyenkor még nem rendelkezik evolúciós szabályokkal, azokat egy külön menü segítségével lehet beállítani. Ilyenkor a kiválasztott régió objektumai is szerkeszthetőek.
 
-A szoftver különösen hasznos tud lenni oktatási célokra, hiszen biztosítja a szabályok elemzésének lehetőségét a lépésenkénti futtatás funkcióval, illetve a teljes szimuláció során megkapott eredmények segítségével tanulmányozható, hogy a létrehozott modell a kívánt nyelvet (ebben az esetben a természetes számok valamely részhalmazát) generálja-e, ezzel segítve a helyes és helytelen működés (nem teljeskörű) kiszűrését.
-A program biztosít a felhasználó számára egy használati útmutatót, melyben megtalálja a legfontosabb információkat ahhoz, hogy korábbi ismeretek nélkül is képes legyen egy működő membránrendszert megalkotni és számítását szimulálni.
+A szoftver különösen hasznos tud lenni oktatási célokra, hiszen biztosítja a szabályok elemzésének lehetőségét a lépésenkénti futtatás funkcióval, illetve a teljes szimuláció során megkapott eredmények segítségével tanulmányozható, hogy a létrehozott modell a kívánt nyelvet (a természetes számok valamely részhalmazát) generálja-e, ezzel segítve a helyes és helytelen működés (nem teljeskörű) kiszűrését.
+A program a felhasználó számára egy használati útmutatót biztosít, melyben megtalálja a legfontosabb információkat ahhoz, hogy korábbi ismeretek nélkül is képes legyen egy működő membránrendszert megalkotni és számítását szimulálni.
 
-Lehetőség van a membránrendszer aktuális állapotának lementésére, illetve egy korábbi mentés betöltésére. A membránrendszer \textit{JSON} formátumban kerül mentésre, így azt a felhasználónak lehetősége nyílik arra, hogy a fájlban is módosítson, majd a módosított állapotot töltse be. Ezáltal a szoftver biztosítani tudja azt, hogy egy bonyolult vagy gyakran vizsgált membránrendszert nem szükségszerű a kezdetektől megalkotni, elegendő egyszer a kívánt konfigurációját előállítani, majd később betölteni a már elmentett verziót.
+Lehetőség van a membránrendszer aktuális állapotának lementésére, illetve egy korábbi mentés betöltésére. A membránrendszer \textit{JSON} formátumban kerül mentésre, így a felhasználónak lehetősége nyílik arra, hogy a fájlban is módosítson, majd a módosított állapotot töltse be. Ezáltal a szoftver biztosítani tudja azt, hogy egy bonyolult vagy gyakran vizsgált membránrendszert nem szükségszerű a kezdetektől megalkotni, elegendő egyszer a kívánt konfigurációját előállítani, majd később betölteni a már elmentett verziót.
 
 A feladatot \textit{Python} programozási nyelven, a \textit{Qt} keretrendszer felhasználásával valósítottam meg.
