--- a/elteikthesis-master/samples_hu/sum.tex
+++ b/elteikthesis-master/samples_hu/sum.tex
@@ -1,7 +1,8 @@
 \chapter{Összegzés}
 \label{ch:sum}
-A megvalósított szoftver a membránrendszerek alapmodelljének és szimport-antiport rendszerek tetszőleges példányát képes a felhasználó által megadott konfiguráció segítségével megalkotni, majd szimulálni.  A szimulálás során biztosítja a nemdeterminisztikusságot, amelynek szemléltetésére a membránrendszer aktuális állapotából kiinduló párhuzamos számítások esetén egy összegzést készít a felhasználó számára.A lépésenkénti futtatás során is tanúja lehet a felhasználó a rendszer véletlenszerű fejlődésének.
-A membránrendszerekkel való ismerkedés és az alkalmazás teljes funkcionalitásának elsajátítása céljából egy használati útmutató is található az alkalmazásban, amely elegendő információt nyújt az előbb említett mindkét területen való kezdeti útbaigazításhoz. Az absztrakt modellhez és a természet által inspirált struktúrához a membránrendszer a grafikus felületen vizuálisan jelenik meg, így az a használat során egy felhasználóbarát és intuitív interaktív interfészt biztosít a mögöttes reprezentáció manipulálásához. Így a matematikailag nehezen leírható konfigurációk és konfigurációátmenet-sorozatok egyszerűen és szemléletesen mutathatók be, amely intuíció könnyebb megértést ad a definícióhoz.
+A megvalósított szoftver a membránrendszerek alapmodelljének és a szimport-antiport rendszerek tetszőleges példányát képes a felhasználó által megadott konfiguráció segítségével megalkotni, majd szimulálni.  A szimulálás során biztosítja a nemdeterminisztikusságot, amelynek szemléltetésére a membránrendszer aktuális állapotából kiinduló párhuzamos számítások esetén egy összegzést készít a felhasználó számára.A lépésenkénti futtatás során is tanúja lehet a felhasználó a rendszer véletlenszerű fejlődésének.
+A membránrendszerekkel való ismerkedés és az alkalmazás teljes funkcionalitásának elsajátítása céljából egy használati útmutató is található az alkalmazásban, amely elegendő információt nyújt az előbb említett mindkét területen való kezdeti útbaigazításhoz. Az absztrakt modellhez és a természet által inspirált struktúrához a membránrendszer a grafikus felületen vizuálisan jelenik meg, így az a használat során egy felhasználóbarát és intuitív interfészt biztosít a mögöttes reprezentáció manipulálásához. Így a matematikailag nehezen leírható konfigurációk és konfigurációátmenet-sorozatok egyszerűen és szemléletesen mutathatók be, ezáltal könnyebb megértést adva a definíciókhoz.
+
 A modellezés során kulcsfontosságú metódusok az alkalmazás tervezési fázisában majdnem teljes mértékben elkészültek, ám az eredeti modell megvalósítása után felbukkant pár kezeletlen eset, illetve  módosítandó algoritmus. Ezen hibák kiszűrésében és a helyes implementáció megalkotásában központi szerepet játszottak az egyes osztályokhoz és funkciókhoz tartozó egységtesztek.
 
-Az alkalmazás továbfejlesztésére számos lehetőség adott, amelyek implementálását elősegíti a bővíthetőségre és karbantarthatóságra tekintettel megalkotott modell architektúra. Az egyik legérdekesebb kiegészítése a programnak az aktív P-rendszerek szimulálásának támogatása, amely esetén a régiók töltéssel rendelkeznek és bizonyos szabályok segítségével osztódni is képesek.
+Az alkalmazás továbfejlesztésére számos lehetőség adott, amelyek implementálását elősegíti a bővíthetőségre és karbantarthatóságra tekintettel megalkotott modell architektúra. Az egyik legérdekesebb kiegészítése a programnak az aktív P-rendszerek szimulálásának támogatása, amely esetén a régiók töltéssel rendelkeznek és bizonyos szabályok segítségével akár osztódni is képesek.
